feat: Quick and dirty dev run for full_scope and all cutoffs